       folders by placing special files in them. (Stefan)
- ADD: A "Copy to..." command for the repository browser
       which (if not showing HEAD) shows the "save as"
       dialog and then copies the file to the working copy.
       This is the recommended way to recover a deleted
       file. (Stefan)
- ADD: Option to disable the overlays in applications
       other than explorer. (Stefan)
- CHG: Searching in the log dialog now also searches
       the changed paths. (Stefan)
- CHG: The locatorbar in TME shows the current view range
       with a blue background for better indication. (Stefan)
- CHG: When showing the log in the merge dialog, it will
       stop on the first copy. (Stefan)
- CHG: The check for newer versions of TSVN is now
       done in the background. The dialog only shows
       up if a newer version is actually found. (Stefan)
- CHG: Creating a patch is now possible from single files
       too and not just folders. (Stefan)
- CHG: when setting properties fails, the error message
       is shown and not dropped as before. (Stefan)
- CHG: Don't use the %APPDATA% env but the shell API to
       get the path to the config file in the settings
       dialog. (Stefan)
- BUG: TortoiseMerge could hang when diffing certain files
       and the "ignore leading whitespaces" option turned
       on and only in two pane view. (Stefan)
- BUG: TortoiseMerge could save merges to the wrong file
       if the app wasn't quit between diffs/merges. (Stefan)
- BUG: The context menu key didn't work in the
       repository browser. (Stefan)
- BUG: TSVN could crash if a revprop did not exist. (Stefan)
- BUG: Newlines weren't shown correctly when editing
       the revprops. (Stefan)
- BUG: The default settings for the icon overlays weren't
       shown in the settings dialog. (Stefan)

Version 1.0.6
- ADD: A warning is shown if a file with local modifications
       should be removed. (Stefan)
- ADD: Changing of log-messages and author of any revision