@@ -666,6 +666,22 @@ BEGIN
     LTEXT           "",IDC_CHECKRESULT,7,55,172,37,SS_NOTIFY
 END
 
+IDD_REVERT DIALOGEX 0, 0, 279, 225
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Revert"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,101,204,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,161,204,50,14
+    PUSHBUTTON      "&Help",IDHELP,221,204,50,14
+    CONTROL         "",IDC_REVERTLIST,"SysListView32",LVS_REPORT | 
+                    LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | 
+                    WS_TABSTOP,7,7,265,180
+    CONTROL         "Select / Deselect &All",IDC_SELECTALL,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,192,265,10
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -966,6 +982,14 @@ BEGIN
         RIGHTMARGIN, 179
         TOPMARGIN, 7
         BOTTOMMARGIN, 109
+    END
+
+    IDD_REVERT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 272
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 218
     END
 END
 #endif    // APSTUDIO_INVOKED
