@@ -811,6 +811,12 @@
 					RelativePath="RenameDlg.h">
 				</File>
 				<File
+					RelativePath=".\RevertDlg.cpp">
+				</File>
+				<File
+					RelativePath=".\RevertDlg.h">
+				</File>
+				<File
 					RelativePath="SwitchDlg.cpp">
 				</File>
 				<File
@@ -1050,10 +1056,10 @@
 				RelativePath="..\Languages\res\ssh.ico">
 			</File>
 			<File
-				RelativePath="..\Languages\res\Tortoise.ico">
+				RelativePath="..\Icons\Tortoise.ico">
 			</File>
 			<File
-				RelativePath="..\Icons\Tortoise.ico">
+				RelativePath="..\Languages\res\Tortoise.ico">
 			</File>
 			<File
 				RelativePath="..\Icons\Tortoise13by13.ico">
@@ -1108,6 +1114,6 @@
 			Value="0"/>
 		<Global
 			Name="RESOURCE_FILE"
-			Value="\Development\Svn\TortoiseSVN\src\Languages\TortoiseProcENG.rc"/>
+			Value="\Development\Subversion\TortoiseSVN\src\Languages\TortoiseProcENG.rc"/>
 	</Globals>
 </VisualStudioProject>
