@@ -25,6 +25,8 @@
        file. (Stefan)
 - ADD: Option to disable the overlays in applications
        other than explorer. (Stefan)
+- ADD: Reverting got its own dialog where you can select
+       and deselect files/folders from reverting. (Stefan)
 - CHG: Searching in the log dialog now also searches
        the changed paths. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
